--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "jest": "^24.8.0"
   },
   "scripts": {
-    "test": "jest "
+    "test": "jest --watch "
   },
   "keywords": [],
   "author": "",
